# internships

./: Internships.postman_collection.json  Makefile  README.md
api-consumer/: Makefile  (+1 more)
api/app/: pyproject.toml  script.sh
api/app/media/: timesheet_template_bottom_part.xlsx  timesheet_template_top_part.xlsx
api/app/src/app/: controller.py
api/app/src/app_role/: app_role_urls.py  models.py  serializers.py
api/app/src/app_role/controllers/: app_role.py
api/app/src/app_role/services/: app_role_core.py  app_role_repository.py  app_role_service.py
api/app/src/auth/: auth_urls.py  serializers.py
api/app/src/auth/controllers/: auth.py
api/app/src/auth/services/: auth_service.py  password_service.py
api/app/src/config/: gunicorn_hooks_config.py  middlewares.py  settings.py  urls.py
api/app/src/message_broker/: producer.py
api/app/src/place/: direction_urls.py  models.py  place_urls.py  serializers.py
api/app/src/place/controllers/: direction.py  place.py
api/app/src/place/services/: place_repository.py  place_service.py
api/app/src/points/: points_urls.py
api/app/src/points/controllers/: points.py
api/app/src/route/: models.py  request_urls.py  route_urls.py  serializers.py  template_urls.py
api/app/src/services/: decorators.py  email_service.py  permission_service.py  startup_service.py
api/app/src/user/: models.py  serializers.py  user_urls.py
email-migrations/app/: pyproject.toml
points-api/app/: pyproject.toml
points-api/app/src/config/: urls.py
points-api/app/src/points_event/: models.py  points_event_urls.py  serializers.py
(+117 files in other folders)
